green-bar+main overflow+media query <576 correction

--- a/css/style.css
+++ b/css/style.css
@@ -22,31 +22,35 @@ header .container {
 
     width: 100%;
     height: 100%;
-    padding: 15px 0;
 }
 
-header .logo,
-header a,
-header h3 {
-    padding-left: 15px;
+header .container .header-top,
+header .container .header-bottom {
+    padding: 12px;
+}  
+
+header .logo {
+    width: 80%;
+    padding-bottom: 15px;
+}
+
+header .container .header-top {
+    overflow: hidden;
 }
 
 header .container .header-top .logo #logo-desktop {
-    width: 70%;
-    padding-bottom: 15px;
+    width: 100%;
+    
     cursor: pointer;
 } 
 
-header .container .header-top .logo .navbar-small {
+header .container .header-top .logo #logo-mobile {
     display: none;
-} 
-
-header .container .header-top nav {
-    padding-bottom: 20px;
 }
 
-header .container .header-top  {
-    overflow: hidden;
+header .container .header-top nav {
+    
+    padding-bottom: 20px;
 }
 
 header .container .header-top .playlist h3 {
@@ -75,17 +79,8 @@ header .container .header-bottom .bottom a {
 }
 
 header .container .header-top nav ul li .nav-row {
-    display:flex;
-}
-
-header .container .header-top nav ul li .nav-row .green-bar {
-    width: 2px;
-    height: 14px;
-    background-color: transparent;
-}
-
-header .container .header-top nav ul li .nav-row .active {
-    background-color: #baff30;
+    position: relative;
+    display: flex;
 }
 
 header .container .header-top nav ul li .nav-row a img,
@@ -93,14 +88,6 @@ header .container .header-bottom .bottom a img {
     width: 1.4em;
     filter: invert(50%);
 } 
-
-header .container .header-bottom {
-    padding: 0 15px;
-}
-
-header .container .header-bottom .bottom a {
-    padding-left: 0;
-}
 
 header .container .header-bottom .download {
     padding-bottom: 5px;
@@ -129,9 +116,18 @@ header .container .header-bottom .download a:hover img {
 }
 
 /* active */
-header .container .header-top nav ul li .nav-row:active .green-bar {
+header .container .header-top nav ul li.active .nav-row::before {
+    content: "";
+
+    position: absolute;
+    top: 0;
+    left: -12px;
+
+    width: 2px;
+    height: 100%;
+
     background-color: #baff30;
-}
+} 
 /* /header */
 
 /* main */
@@ -139,7 +135,7 @@ main {
      width: calc(100% - 150px); /* viewport size - header size */
     
     background-color: #141922;
-    overflow-y: scroll; 
+    overflow-y: auto; 
 }
 
 /* main section upgrade button */
@@ -190,30 +186,29 @@ main nav ul {
 }
 
 main nav ul li.nav-opt {
+    position: relative;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
 }
 
-main nav ul li.nav-opt .underline {
-    margin-top: 2px;
-    height: 1.5px;
-    width: 25px;
-    background-color: transparent;
-}
+main nav ul li.active::before {
+    content: "";
 
-main nav ul li.nav-opt .active {
+    position: absolute;
+    bottom: -6px;
+    
+    width: 25px;
+    height: 3px;
+
     background-color: #baff30;
 }
 
 /* hover */
 main nav ul li.nav-opt:hover {
     color: white;
-}
-/* active */
-main nav ul li.nav-opt:active .underline {
-    background-color: #baff30;
 }
 /* /main navbar */
 
@@ -249,7 +244,7 @@ main .music .card-container .card {
     align-items: center;
 
     text-align: center;
-    width: calc(100% / 6);
+    width: calc(100% / 6 - (15px / 6 * 5));
 }
 
 main .popular .card-container .card .card-img img {
@@ -539,58 +534,38 @@ footer .footer-right .volume-bar:hover i {
     }
 
     header .container {
-        padding: 5px 10px;
-    }
-
-    header .logo{
-        padding: 0;
+        padding: 10px;
     }
 
     header .container .header-top,
+    header .container .header-bottom {
+        padding: 0;
+}  
+
     header .container .header-top .logo,
-    header .container .header-top .logo .navbar-small {
-        height: 100%;
-    }
-
-    header .container .header-top .logo .navbar-small {
-        display: block;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    header .container .header-top .logo .navbar-small div{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-    }
-
-    header .container .header-top .logo .navbar-small div:nth-child(2){
-        gap: 20px;
+    header img {
+        width: 100%;
     }
 
     header .container .header-top .logo #logo-desktop,
-    header .container .header-top nav,
+    header .container .header-top nav ul li .nav-row a .nav-txt,
+    header .container .header-top nav ul li .active::before,
     header .container .header-top .playlist,
-    header .container .header-bottom{
+    header .container .header-bottom .bottom a .bottom-txt {
         display: none;
-    }
-
-    header .container .header-top .logo .navbar-small img.navbar-small-img {
-    width: 1.8em;
-    filter: invert(50%);
     } 
-    
-    header .container .header-top .logo .navbar-small img#user-pic {
-    width: 2em;
-    height: 2em; 
-    border-radius: 50%;
 
-    filter: invert(0%);
-    background-color: #808080;
+    header .container .header-bottom .download {
+        border: none;
     }
+    
+    header .container .header-top .logo #logo-mobile {
+        display: block;
+    }
+
+    
+
+
 
     main,
     main section.container-upgrade {
@@ -600,6 +575,7 @@ footer .footer-right .volume-bar:hover i {
     footer .footer-right .options-icons {
         gap: 2px;
     }
+
 } 
 
 
